Add smooth scroll functionality and enhance hero section with new features

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+    <!-- Coming Soon Badge -->
+    <div class="coming-soon">Coming Soon!</div>
+
+    <!-- Scroll to Top Button -->
+    <button class="scroll-top" aria-label="Scroll to top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+
     <header class="hero">
         <div class="hero-content">
             <h1>Capture Paradise Through Your Lens</h1>
@@ -44,7 +52,7 @@
     </header>
 
     <main>
-        <section class="features">
+        <section class="features" id="features">
             <h2>Tour Highlights</h2>
             <div class="features-grid">
                 <div class="feature-card">
@@ -70,7 +78,7 @@
             </div>
         </section>
 
-        <section class="contact">
+        <section class="contact" id="contact">
             <h2>Join Our Next Tour</h2>
             <form action="https://formspree.io/f/your-form-id" method="POST" class="contact-form">
                 <div class="form-group">
