Refactor timeline and highlights sections for improved layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -93,13 +93,12 @@
     </header>
 
     <main>
-        <!-- New Itinerary Section -->
         <section id="tour-itinerary" class="itinerary-section">
             <h2>Go Slow Photo Adventure</h2>
             <p class="itinerary-time">6:30 AM - 10:30 AM</p>
             
             <div class="timeline">
-                <div class="timeline-item">
+                <article class="timeline-item">
                     <div class="timeline-icon">
                         <i class="fas fa-sun" aria-hidden="true"></i>
                     </div>
@@ -113,9 +112,9 @@
                             <li>Coffee and morning vibes included!</li>
                         </ul>
                     </div>
-                </div>
+                </article>
 
-                <div class="timeline-item">
+                <article class="timeline-item">
                     <div class="timeline-icon">
                         <i class="fas fa-street-view" aria-hidden="true"></i>
                     </div>
@@ -129,9 +128,9 @@
                             <li>Find hidden street art gems</li>
                         </ul>
                     </div>
-                </div>
+                </article>
 
-                <div class="timeline-item">
+                <article class="timeline-item">
                     <div class="timeline-icon">
                         <i class="fas fa-tree" aria-hidden="true"></i>
                     </div>
@@ -145,9 +144,9 @@
                             <li>Learn local photo tricks</li>
                         </ul>
                     </div>
-                </div>
+                </article>
 
-                <div class="timeline-item">
+                <article class="timeline-item">
                     <div class="timeline-icon">
                         <i class="fas fa-umbrella-beach" aria-hidden="true"></i>
                     </div>
@@ -161,7 +160,7 @@
                             <li>Wrap up with good vibes</li>
                         </ul>
                     </div>
-                </div>
+                </article>
             </div>
 
             <div class="highlights">
