Update import paths and asset references to use absolute URLs for consistency

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Open Graph Tags -->
     <meta property="og:title" content="Caye Caulker Photography Tours | Capture Paradise in Belize">
     <meta property="og:description" content="Learn professional smartphone photography while exploring Belize's most charming island. 4-hour guided tours with expert instruction.">
-    <meta property="og:image" content="images/caye-caulker-belize-beach-ocean.webp">
+    <meta property="og:image" content="/images/caye-caulker-belize-beach-ocean.webp">
     <meta property="og:type" content="website">
     
     <!-- Schema Markup -->
@@ -19,7 +19,7 @@
         "@type": "LocalBusiness",
         "name": "Caye Caulker Photography Tours",
         "description": "Expert-guided photography tours in Caye Caulker, Belize",
-        "image": "images/caye-caulker-belize-beach-ocean.webp",
+        "image": "/images/caye-caulker-belize-beach-ocean.webp",
         "address": {
             "@type": "PostalAddress",
             "addressLocality": "Caye Caulker",
@@ -75,7 +75,7 @@
     }
     </script>
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -104,7 +104,7 @@
                     </div>
                     <div class="timeline-content">
                         <h3>Sunrise Magic at The Split (6:30-7:30)</h3>
-                        <img src="images/caye-caulker-sunrise-sunset-split.webp" alt="Sunrise photography at The Split" class="timeline-image">
+                        <img src="/images/caye-caulker-sunrise-sunset-split.webp" alt="Sunrise photography at The Split" class="timeline-image">
                         <ul>
                             <li>Catch that perfect Caribbean sunrise</li>
                             <li>Learn the secrets of golden hour shots</li>
@@ -121,7 +121,7 @@
                     </div>
                     <div class="timeline-content">
                         <h3>Village Vibes & Local Life (7:30-8:30)</h3>
-                        <img src="images/village-life-caye-caulker-belize-locals.webp" alt="Colorful village streets and local life" class="timeline-image">
+                        <img src="/images/village-life-caye-caulker-belize-locals.webp" alt="Colorful village streets and local life" class="timeline-image">
                         <ul>
                             <li>Wander the sandy streets</li>
                             <li>Snap colorful island houses</li>
@@ -138,7 +138,7 @@
                     </div>
                     <div class="timeline-content">
                         <h3>Secret Island Spots (8:45-9:45)</h3>
-                        <img src="images/caye-caulker-secret-spots-lobster-belize.webp" alt="Hidden mangrove corners and secret spots" class="timeline-image">
+                        <img src="/images/caye-caulker-secret-spots-lobster-belize.webp" alt="Hidden mangrove corners and secret spots" class="timeline-image">
                         <ul>
                             <li>Discover hidden mangrove corners</li>
                             <li>Spot pelicans and sea birds</li>
@@ -155,7 +155,7 @@
                     </div>
                     <div class="timeline-content">
                         <h3>Beach Life & Final Shots (9:45-10:30)</h3>
-                        <img src="images/caye-caulker-beach-belize.webp" alt="Beach life and marine photography" class="timeline-image">
+                        <img src="/images/caye-caulker-beach-belize.webp" alt="Beach life and marine photography" class="timeline-image">
                         <ul>
                             <li>Master those beach shots</li>
                             <li>Catch some boat life action</li>
@@ -240,6 +240,6 @@
         <p>&copy; 2024 Caye Caulker Photography Tours. All rights reserved.</p>
     </footer>
 
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="/js/main.js"></script>
 </body>
 </html>
