Update itinerary section title to reflect "Caye Caulker, Belize Photo Excursion"

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <!-- Main content sections will follow with proper H2 and H3 hierarchy -->
 
 <section id="tour-itinerary" class="itinerary-section">
-    <h2>Caribbean Photo Walk Itinerary</h2>
+    <h2>Caye Caulker, Belize Photo Excursion Itinerary</h2>
     <p class="itinerary-time">6:30 AM - 10:30 AM</p>
     
     <div class="timeline">
