--- a/index.html
+++ b/index.html
@@ -303,47 +303,47 @@
     <h2>Caye Caulker, Belize Photo Excursion Information</h2>
     <div class="features-grid">
         <div class="feature-card">
-            <i class="fas fa-camera"></i>
+            <i class="fas fa-camera-retro" aria-hidden="true"></i>
             <h3>Expert Photography Guide</h3>
             <p>Master smartphone camera tips and techniques from experienced guides who know Belize's best photo spots</p>
         </div>
         <div class="feature-card">
-            <i class="fas fa-map-marked-alt"></i>
+            <i class="fas fa-map-marked-alt" aria-hidden="true"></i>
             <h3>Hidden Caribbean Gems</h3>
             <p>Access secret spots perfect for capturing unique island moments that most Caye Caulker visitors never find</p>
         </div>
         <div class="feature-card">
-            <i class="fas fa-sun"></i>
+            <i class="fas fa-sun" aria-hidden="true"></i>
             <h3>Perfect Lighting Mastery</h3>
             <p>Learn professional travel photography techniques for capturing stunning Caribbean sunrises and golden hour magic</p>
         </div>
         <div class="feature-card">
-            <i class="fas fa-users"></i>
+            <i class="fas fa-users" aria-hidden="true"></i>
             <h3>Local Connections</h3>
             <p>Meet friendly locals and hear their stories while discovering authentic island life through your lens</p>
         </div>
         <div class="feature-card">
-            <i class="fas fa-mobile-alt"></i>
+            <i class="fas fa-mobile-alt" aria-hidden="true"></i>
             <h3>Smartphone Techniques</h3>
             <p>Transform your mobile device into a professional camera with expert composition and editing guidance</p>
         </div>
         <div class="feature-card">
-            <i class="fas fa-compass"></i>
+            <i class="fas fa-compass" aria-hidden="true"></i>
             <h3>Exclusive Locations</h3>
             <p>Visit Caye Caulker's most photogenic spots, carefully selected for their unique visual appeal</p>
         </div>
         <div class="feature-card">
-            <i class="fas fa-clock"></i>
+            <i class="far fa-clock" aria-hidden="true"></i>
             <h3>Flexible Scheduling</h3>
             <p>Choose from sunrise sessions or arrange private tours to fit your Belize vacation schedule</p>
         </div>
         <div class="feature-card">
-            <i class="fas fa-star"></i>
+            <i class="fas fa-star" aria-hidden="true"></i>
             <h3>All Skill Levels</h3>
             <p>Whether you're a beginner or experienced photographer, our guides adapt to your skill level</p>
         </div>
         <div class="feature-card">
-            <i class="fas fa-heart"></i>
+            <i class="fas fa-heart" aria-hidden="true"></i>
             <h3>Island Vibes</h3>
             <p>Experience the laid-back atmosphere of Caye Caulker while improving your photography skills</p>
         </div>
