Update README, modify pricing section to reflect sold-out status, and enhance form functionality

--- a/index.html
+++ b/index.html
@@ -157,8 +157,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
-<body>
-    <!-- Scroll to Top Button -->
+<!-- Scroll to Top Button -->
     <button class="scroll-top" aria-label="Scroll to top">
         <i class="fas fa-arrow-up"></i>
     </button>
@@ -167,7 +166,14 @@
         <div class="hero-content">
             <h1>Capture Paradise: Smartphone Photography Tours in Caye Caulker</h1>
             <p class="hero-description">Discover the art of smartphone photography while exploring Belize's most charming island paradise. Our intimate 4-hour guided tours combine expert instruction with insider knowledge of the island's hidden gems. Perfect for all skill levels, learn professional techniques while photographing tropical sunrises, colorful streets, and pristine Caribbean beaches.</p>
-            <button class="cta-button">Book Your Island Photo Adventure</button>
+            
+            <form class="hero-form" action="https://formspree.io/f/xrbglvpd" method="POST">
+                <p class="form-message">We are currently sold out. Enter your email to receive our free Caye Caulker Island Photography Guide.</p>
+                <div class="form-group">
+                    <input type="email" name="email" placeholder="Your email address" required>
+                    <button type="submit" class="cta-button">Get Free Guide</button>
+                </div>
+            </form>
         </div>
     </header>
 
@@ -351,73 +357,76 @@
 </section>
 
 <section id="social-proof" class="social-proof-section">
-    <div class="stats-container">
-        <div class="stat-item fade-in">
-            <span class="stat-number">500+</span>
-            <span class="stat-label">Happy Photographers in Belize</span>
-        </div>
-        <div class="stat-item fade-in">
-            <span class="stat-number">120,000+</span>
-            <span class="stat-label">Vacation Photos Taken</span>
-        </div>
-        <div class="stat-item fade-in">
-            <span class="stat-number">30+</span>
-            <span class="stat-label">Caye Caulker Spots</span>
-        </div>
-        <div class="stat-item fade-in">
-            <span class="stat-number">5.0</span>
-            <span class="stat-label">Star Excursion Rating</span>
-        </div>
-    </div>
-
-    <div class="testimonials-container">
-        <div class="testimonial-card fade-in">
-            <span class="star-rating" aria-label="5 out of 5 stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-            </span>
-            <p class="testimonial-content">"The sunrise session in Caye Caulker was absolutely magical. I learned so much about smartphone photography while capturing Belize's beauty. Meeting the friendly locals and hearing their stories made this excursion truly special!"</p>
-            <div class="testimonial-author">
-                <div class="author-info">
-                    <h4>Sarah Mitchell</h4>
-                    <p class="author-location">Vancouver, Canada</p>
-                </div>
+    <div class="container">
+        <h2>What Our Photographers Say</h2>
+        <div class="stats-container">
+            <div class="stat-item fade-in">
+                <span class="stat-number">500+</span>
+                <span class="stat-label">Happy Photographers in Belize</span>
+            </div>
+            <div class="stat-item fade-in">
+                <span class="stat-number">120,000+</span>
+                <span class="stat-label">Vacation Photos Taken</span>
+            </div>
+            <div class="stat-item fade-in">
+                <span class="stat-number">30+</span>
+                <span class="stat-label">Caye Caulker Spots</span>
+            </div>
+            <div class="stat-item fade-in">
+                <span class="stat-number">5.0</span>
+                <span class="stat-label">Star Excursion Rating</span>
             </div>
         </div>
 
-        <div class="testimonial-card fade-in">
-            <span class="star-rating" aria-label="5 out of 5 stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-            </span>
-            <p class="testimonial-content">"This tour completely changed how I take vacation photos. The hidden spots we visited in Caye Caulker were incredible, and the instructor's knowledge of both photography and Belize made for an unforgettable experience."</p>
-            <div class="testimonial-author">
-                <div class="author-info">
-                    <h4>Marcus Chen</h4>
-                    <p class="author-location">Singapore</p>
+        <div class="testimonials-container">
+            <div class="testimonial-card fade-in">
+                <span class="star-rating" aria-label="5 out of 5 stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </span>
+                <p class="testimonial-content">"The sunrise session in Caye Caulker was absolutely magical. I learned so much about smartphone photography while capturing Belize's beauty. Meeting the friendly locals and hearing their stories made this excursion truly special!"</p>
+                <div class="testimonial-author">
+                    <div class="author-info">
+                        <h4>Sarah Mitchell</h4>
+                        <p class="author-location">Vancouver, Canada</p>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="testimonial-card fade-in">
-            <span class="star-rating" aria-label="5 out of 5 stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-            </span>
-            <p class="testimonial-content">"Such a fun and educational excursion in Belize! The small group size made it easy to get personalized tips and meet great locals along the way. I left with amazing photos of Caye Caulker and skills to capture beautiful moments wherever I travel."</p>
-            <div class="testimonial-author">
-                <div class="author-info">
-                    <h4>Emma Rodriguez</h4>
-                    <p class="author-location">Barcelona, Spain</p>
+            <div class="testimonial-card fade-in">
+                <span class="star-rating" aria-label="5 out of 5 stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </span>
+                <p class="testimonial-content">"This tour completely changed how I take vacation photos. The hidden spots we visited in Caye Caulker were incredible, and the instructor's knowledge of both photography and Belize made for an unforgettable experience."</p>
+                <div class="testimonial-author">
+                    <div class="author-info">
+                        <h4>Marcus Chen</h4>
+                        <p class="author-location">Singapore</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="testimonial-card fade-in">
+                <span class="star-rating" aria-label="5 out of 5 stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </span>
+                <p class="testimonial-content">"Such a fun and educational excursion in Belize! The small group size made it easy to get personalized tips and meet great locals along the way. I left with amazing photos of Caye Caulker and skills to capture beautiful moments wherever I travel."</p>
+                <div class="testimonial-author">
+                    <div class="author-info">
+                        <h4>Emma Rodriguez</h4>
+                        <p class="author-location">Barcelona, Spain</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -467,21 +476,10 @@
         </div>
 
         <div class="cta-container">
-            <button class="cta-button">Reserve Your Spot Now</button>
-            <p class="spots-limited">Limited to 8 photographers per tour - Book early to secure your Caye Caulker adventure!</p>
+            <button class="cta-button" disabled>SOLD OUT</button>
+            <p class="spots-limited">Sign up above to receive our free Caye Caulker Island Photography Guide!</p>
         </div>
     </div>
-</section>
-
-<section class="contact" id="contact">
-    <h2>Join Our Next Tour</h2>
-    <form action="https://formspree.io/f/your-form-id" method="POST" class="contact-form">
-        <div class="form-group">
-            <label for="email">Email Address</label>
-            <input type="email" id="email" name="email" required placeholder="Enter your email">
-        </div>
-        <button type="submit" class="submit-button">Get Tour Updates</button>
-    </form>
 </section>
 
 <footer>
